Corrected the TimeSlotService